test/files/neg/dynamic-SI-4536-refchecks.scala
object dynamicObject extends Dynamic
class dynamicClass extends Dynamic
abstract class dynamicAbstractClass extends Dynamic
trait dynamicTrait extends Dynamic
